<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate Home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate Up</string>
    <string name="abc_action_menu_overflow_description">More Options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an App</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="accept">Accept</string>
    <string name="admob">a14e9e5901758a8</string>
    <string name="app_name">Mumblr</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audioOutputs">Audio Outputs</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="blueFeContactChooseActivity_label">Choose existing Mumblr contact</string>
    <string name="blue_fi_bt_disabled">Mumblr Bluetooth channel is disabled.</string>
    <string name="blue_fi_service_disabled">Mumblr Service is disalbed.</string>
    <string name="bluetooth_is_off">Bluetooth is off. Tap to turn it On.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btIconImage">BT Icon</string>
    <string name="button_pair_new_device">Pair new device</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">Chat</string>
    <string name="chat_delete_all">Delete all messages</string>
    <string name="chat_sending">Sending…</string>
    <string name="chat_sending_failed">Failed…tap to retry</string>
    <string name="connecting">Connecting</string>
    <string name="contactIcon">Contact Icon</string>
    <string name="contentToggleGroup">Toggle Group</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="dial_eula_agree">Agree</string>
    <string name="dial_eula_disagree">Disagree</string>
    <string name="dial_no">No</string>
    <string name="dial_yes">Yes</string>
    <string name="discard_available_info">Discard availability info</string>
    <string name="discoverable">Make discoverable</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="et_MessageToSendHint">Send a message</string>
    <string name="expUI">Exp. UI</string>
    <string name="handsetEarpiece">Handset Earpiece</string>
    <string name="host_file_location">/etc/hosts</string>
    <string name="ib_Call">Call</string>
    <string name="ib_Send">Send</string>
    <string name="info">Info</string>
    <string name="iv_LeftImageContentType">"Friend's picture"</string>
    <string name="iv_RightImageContentType">My picture</string>
    <string name="license_error_message">"Error contacting licensing server, please make sure you have internet access for the check.

 Would you like to retry?"</string>
    <string name="license_error_title">Licensing Error</string>
    <string name="manage_bluetooth_devices">Bluetooth Devices</string>
    <string name="manage_contact">Manage Contact</string>
    <string name="manage_contact_add_bt">Add Bluetooth Contact</string>
    <string name="manage_contact_add_wf">Add Wifi Contact</string>
    <string name="manage_contact_add_wf_p2p">Add Wifi Direct Contact</string>
    <string name="manage_contact_android_contact">Android Contact</string>
    <string name="manage_contact_mumblr_name">Mumblr Name</string>
    <string name="manage_contact_bt_mac">Bluetooth Address</string>
    <string name="manage_contact_tap_to_ass">Tap to associate</string>
    <string name="manage_contact_wf_mac">WiFi Address</string>
    <string name="manage_contact_wf_p2p_mac">WiFi Direct Address</string>
    <string name="manage_wifi_devices">WiFi Devices</string>
    <string name="manage_wifi_direct_devices">WiFi Direct Devices</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="mute">Mute</string>
    <string name="nav_menu_purchase">© Nexus Communications</string>
    <string name="naviTextItemPlaceHolder">Menu Item Child</string>
    <string name="no_contacts_string">No contacts. Connect to a network to add nearby people.</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="ok">Ok</string>
    <string name="pname">com.okean.btcompaid</string>
    <string name="reject">Reject</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="speaker">Speaker</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="string_wf_devicelistactivity_title">Select a WiFi device</string>
    <string name="toast_host_file">WARNING: Ad blocking detected! :(</string>
    <string name="toast_update_paid_plug_in">© Nexus Communications</string>
    <string name="uid">okean.btcom</string>
    <string name="unmute">Unmute</string>
    <string name="volumeGain">Volume Gain</string>
    <string name="wifiIconImage">Wifi Icon</string>
    <string name="wifi_devices_refresh_device_availability">Refresh Device Availability</string>
    <string name="wifi_devices_wifi_is_off">WiFi is off. Tap to turn it on.</string>
</resources>
