<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/manage_contact_mumblr_name" android:layout_weight="1.0" />
        <EditText android:id="@id/fragment_manage_contact_mumblr_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/manage_contact_bt_mac" android:layout_weight="1.0" />
        <EditText android:id="@id/fragment_manage_contact_bt_mac" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/manage_contact_tap_to_ass" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/manage_contact_wf_mac" android:layout_weight="1.0" />
        <EditText android:id="@id/fragment_manage_contact_wf_mac" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/manage_contact_tap_to_ass" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/manage_contact_android_contact" android:layout_weight="1.0" />
        <EditText android:id="@id/fragment_manage_contact_android_contact" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/manage_contact_tap_to_ass" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
    </LinearLayout>
</ScrollView>